[gd_scene load_steps=3 format=3 uid="uid://djghivsshxngt"]

[ext_resource type="Script" uid="uid://342gnsyor230" path="res://Scripts/Carte.gd" id="1_j3r2x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jw58i"]

[node name="Carte" type="Node2D"]
script = ExtResource("1_j3r2x")

[node name="Area2D" type="Area2D" parent="."]
top_level = true

[node name="FrontFace" type="Sprite2D" parent="Area2D"]

[node name="BackFace" type="Sprite2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jw58i")

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
